@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-16T16:08:13Z",
+  "timestamp" : "2022-08-17T00:39:27Z",
   "count_outdated" : 43,
   "uniques_outdated" : 13,
-  "count" : 47,
-  "uniques" : 17,
+  "count" : 48,
+  "uniques" : 18,
   "views" : [
     {
       "timestamp": "2022-08-03T00:00:00Z",
@@ -28,10 +28,10 @@
     },
     {
       "timestamp": "2022-08-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
